# 6502

debug_adapter_protocol/: LOGGING.md  dap.json  pyproject.toml  run_adapter.sh  test_async_events.py
debug_adapter_protocol/src/: backend.py  backend_session.py  dap.py  seq_generator.py  serial_listener.py
debug_adapter_protocol/src/events/: __init__.py  event_queue.py
debug_adapter_protocol/src/handlers/: __init__.py  attach.py  base_handler.py  breakpoint_locations.py  cancel.py  completions.py  configuration_done.py  continue_request.py  data_breakpoint_info.py  disassemble.py  disconnect.py  dispatcher.py  evaluate.py  exception_info.py  goto_request.py  goto_targets.py  initialize.py  launch.py  loaded_sources.py  locations.py  logging_config.py  modules.py  next_request.py  pause.py  read_memory.py  restart.py  restart_frame.py  reverse_continue.py  run_in_terminal.py  scopes.py  set_breakpoints.py  set_data_breakpoints.py  set_exception_breakpoints.py  set_expression.py  set_function_breakpoints.py  set_instruction_breakpoints.py  set_variable.py  source.py  stack_trace.py  start_debugging.py  (+9 more)
debug_adapter_protocol/tests/: conftest.py  test_serial_listener.py  test_smoke.py
programs/chaser/: chaser.asm  chaser.cfg  chaser.h  makefile
programs/ioutils/: chaser.asm  chaser.inc  dump.sh  global_defs.inc  i2c.asm  i2c.inc  io.inc  iohost.asm  iohost_regs.inc  ioutils.asm  ioutils.cfg  ioutils.h  ioutils.txt  lcd.asm  lcd.inc  lcd0.inc  main.asm  makefile  mcp23017.inc  varstack.asm  varstack.inc  via6522.asm  via6522.inc  via6522_import.inc  via6522_regs.inc
rom/: CMakeLists.txt  Makefile  makefile  mntrp2040.sh  readme.md  rom.c
rom/src/: bus_asserts.cpp  bus_asserts.h  cmd_io.cpp  cmd_io.h  cmd_io_internal.h  common_defs.h  debugger.cpp  debugger.h  io_menu.cpp  io_menu.h  iohost.cpp  iohost.h  iohost_read.cpp  iohost_read.h  iohost_read.pio  iohost_read.pio.h  ioutils.h  log_queue.cpp  log_queue.h  master_menu.h  menu.cpp  menu.h  pin_defs.h  pin_scope.cpp  pin_scope.h  pio_break.cpp  pio_break.h  pio_break.pio  pio_break.pio.h  rom.cpp  rom_ram.cpp  rom_ram.h  rom_ram_internal.h  terminal.cpp  terminal.h  types.h  validator.h  via6522.cpp  via6522.h
