[project]
name = "debug-adapter-protocol"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets (>=16.0,<17.0)",
    "debugpy (>=1.8.20,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
typer = ">=0.24.0,<0.25.0"
pytest = "^9.0.2"
